fix alignment for devise pages

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1924,3 +1924,17 @@ body.active-popup {
 textarea.organizers-field {
   height: auto !important;
 }
+
+.tight-wrapper {
+  padding: 50px 0;
+  width: 300px;
+
+  h2, .checkbox, .full-width {
+    margin-bottom: 10px;
+  }
+
+  .field {
+    width: 276px;
+    margin-bottom: 10px;
+  }
+}
