--- a/app/assets/stylesheets/restaurants.css.scss
+++ b/app/assets/stylesheets/restaurants.css.scss
@@ -20,7 +20,6 @@
 
 .placard-heading {
 	font-size: 24px;
-	font-family: serif;
 	position: relative;
 	top: -80px;
 	margin-bottom: 30px;
