--- a/app/assets/stylesheets/students.css.scss
+++ b/app/assets/stylesheets/students.css.scss
@@ -29,11 +29,11 @@
 }
 
 #students-steps img {
-	margin-bottom: 80px
+	margin-bottom: 60px
 }
 
 #students-steps p {
-	margin-bottom: 120px;
+	margin-bottom: 110px;
 	line-height: 30px;
 }
 
